--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -2,11 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
-    <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">  
+    <title>Account Info</title>
+    <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">
   </head>
   <body id="page-top">
-    
+    <% if Helpers.is_logged_in?(session) %>
+      <h1>Welcome <%= Helpers.current_user(session).username %></h1>
+      <h3>Your Balance: <%= Helpers.current_user(session).balance %></h3>
+      <a href="/logout">Log Out</a>
+    <% else %>
+      <% redirect_to '/' %>
+    <% end %>
 
   </body>
 </html>
